rabbitmq/k8s/service-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: "rabbitmq"
spec:
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: rabbitmq
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: rabbitmqui
  selector:
    deploymentconfig: "rabbitmq"
    app.kubernetes.io/name: "rabbitmq"
