rabbitmq/k8s/route-rabbitmqui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rabbitmqui
  labels:
    app: rabbitmqui
    app.kubernetes.io/component: rabbitmqui
    app.openshift.io/runtime-version: latest
    app.kubernetes.io/part-of: rabbitmq
    router: prod
spec:
  host: "rabbitmqui.apps.ocp-dc1.pbh.gov.br"
  port:
    targetPort: 15672
  to:
    kind: Service
    name: rabbitmq
    weight: 100
